--- a/play.yaml
+++ b/play.yaml
@@ -3,11 +3,27 @@
   hosts: pi
 
   tasks:
-    - name: Create config file
-      ansible.builtin.template:
-        src: templates/my.cfg.j2
-        dest: /home/pi/my.cfg
-      notify: Restart stuff
+    - name: Install FTP
+      become: yes
+      ansible.builtin.apt:
+        name: vsftpd
+
+    - name: Copy FTP configuration
+      become: yes
+      ansible.builtin.copy:
+        src: conf/vsftpd.conf
+        dest: /etc/vsftpd.conf
+        owner: root
+        group: root
+        mode: '0644'
+      notify:
+        - Restart vsftpd
+
+    - name: Install vim
+      become: yes
+      ansible.builtin.apt:
+        name: vim
+        state: latest
 
     - name: Install Openjdk-8
       become: yes
@@ -30,8 +46,44 @@
     - name: Add docker group to pi user
       become: yes
       command: "usermod -aG docker pi"
+
+    - name: install docker-compose requirements
+      become: yes
+      ansible.builtin.apt:
+        pkg:
+        - libffi-dev
+        - libssl-dev
+        - python3-dev
+        - python3 
+        - python3-pip
+
+    - name: Install docker-compose
+      become: yes
+      command: pip3 install docker-compose
   
+    - name: Create app directories
+      become: yes
+      ansible.builtin.file:
+        path: '{{ item.path }}'
+        state: directory
+      loop:
+        - { path: /home/pi/apps/jellyfin/config/ }
+        - { path: /home/pi/apps/jellyfin/music/ }
+        - { path: /home/pi/apps/nextcloud/ }
+
+    - name: Copy docker-compose 
+      ansible.builtin.copy:
+        src: conf/docker-compose.yml
+        dest: /home/pi/apps
+
+    - name: Install libseccomp2.4.4
+      become: yes
+      ansible.builtin.apt:
+        deb: "http://ftp.us.debian.org/debian/pool/main/libs/libseccomp/libseccomp2_2.4.4-1~bpo10+1_armhf.deb"
+
   handlers:
-    - name: Restart stuff
-      ansible.builtin.debug:
-        msg: Restarting stuff
+    - name: Restart vsftpd
+      become: yes
+      ansible.builtin.service:
+        name: vsftpd 
+        state: restarted
