--- a/group_vars/pi/vars.yaml
+++ b/group_vars/pi/vars.yaml
@@ -1,4 +1,3 @@
-greeting: Welcome Pi Group
-pi_host: "{{ vault_pi_host }}"
-pi_user: "{{ vault_pi_user }}"
-pi_password: "{{ vault_pi_password }}"
+pi_host: "{{ vault_host }}"
+pi_user: "{{ vault_user }}"
+pi_password: "{{ vault_password }}"
