--- a/inventory.yaml
+++ b/inventory.yaml
@@ -6,4 +6,10 @@ all:
           ansible_host: "{{ pi_host }}"
           ansible_user: "{{ pi_user }}"
           ansible_password: "{{ pi_password }}"
+    do:
+      hosts:
+        do1:
+          ansible_host: "{{ do_host }}"
+          ansible_user: "{{ do_user }}"
+          ansible_password: "{{ do_password }}"
                 
