--- a/inventory.yaml
+++ b/inventory.yaml
@@ -11,4 +11,11 @@ all:
         do1:
           ansible_host: "{{ do_host }}"
           ansible_user: "{{ do_user }}"
+
+    hets:
+      hosts:
+        hets1:
+          ansible_host: "{{ hets_host }}"
+          ansible_user: "{{ hets_user }}"
+          ansible_ssh_private_key_file: "/home/camilo.r/.ssh/dev_box_rsa"
                 
