Clean up playbooks

--- a/dev_box.yaml
+++ b/dev_box.yaml
@@ -1,38 +1,9 @@
 ---
 - name: Configure dev box
   hosts: hets
-
-  tasks:
-    - name: Create new user
-      ansible.builtin.user:
-        name: maly
-        shell: /bin/bash
-        create_home: yes
-
-    - name: Allow new user ssh access
-      ansible.builtin.authorized_key:
-        user: maly
-        state: present
-        key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
-
-    - name: Add java app repo
-      ansible.builtin.apt_repository:
-        repo: ppa:openjdk-r/ppa
-        state: present
-
-    - name: Install vim
-      ansible.builtin.apt:
-        name: vim
-        state: present
-
-    - name: Install Openjdk-17
-      ansible.builtin.apt:
-        name: openjdk-17-jdk
-        state: present
-        install_recommends: no
-
-    - name: Install Postgresql 12
-      ansible.builtin.apt:
-        name: postgresql-12
-        state: present
-        install_recommends: no
+  roles:
+    - dev_box
+    - java
+    - postgresql
+    - app1
+    
