--- a/dev_box.yaml
+++ b/dev_box.yaml
@@ -3,7 +3,12 @@
   hosts: hets
   roles:
     - dev_box
+    - git
     - java
     - postgresql
+    - role: node
+      vars:
+        node_version: 16 
+        node_user: maly
     - app1
     
